--- a/Get-VMInventory.ps1/1.Dashboard.md
+++ b/Get-VMInventory.ps1/1.Dashboard.md
@@ -152,7 +152,9 @@
 
 129. IsTagEmpty : False
 130. Tag : noBackup
-131. CustomProperties : {asd, , , ...}
+
+\_131. CustomProperties : {asd, , , ...}
+
 132. CustomProperty : {Business_Owner, Service, Custom1}
 
 \_133. UndoDisksEnabled : False
